Upload image and description added at user entity. ng-show for review if its the same user Settings moved to tus espacios

--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -304,4 +304,11 @@ paper-button.fancy{
     border: 3px dotted #ccc;
     text-align: center;
 }
-
+.btn-non{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+.btn-non:focus{
+    outline: 0;
+}
