--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -1,6 +1,6 @@
 body {
     background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
     color: #333;
 }
 
@@ -243,18 +243,32 @@ ul#strengthBar {
     font-weight: 300;
 }
 
-paper-button.fancy{
-    background: #E91E63;
-    color: white;
+.fancy{
+    background-color: #E91E63 !important;
+    color: white !important;
 }
-paper-button.delete{
-    background: #F44336;
-    color: white;
+.fancy:hover{
+    background-color: #E91E63 !important;
+    color: white !important;
 }
-paper-button.edit{
-    background: #00B0FF;
-    color: white;
+.delete{
+    background: #F44336 !important;
+    color: white !important;
 }
+.delete:hover{
+    background: #F44336 !important;
+    color: white !important;
+}
+
+.edit{
+    background: #00B0FF !important;
+    color: white !important;
+}
+.edit:hover{
+    background: #00B0FF !important;
+    color: white !important;
+}
+
 .message-1{
     float: right;
     margin-left: auto;
@@ -298,12 +312,6 @@ paper-button.fancy{
     background: #E91E63;
     color: white;
 }
-.ng-drop-file{
-    width: 100%;
-    height: 200px;
-    border: 3px dotted #ccc;
-    text-align: center;
-}
 .btn-non{
     background-color: transparent;
     border: none;
@@ -311,4 +319,117 @@ paper-button.fancy{
 }
 .btn-non:focus{
     outline: 0;
+}
+.nav-bar-profile{
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    border-radius:50%;
+    display: inline-block;
+}
+.nav-bar-profile-div{
+    display: inline-block;
+    vertical-align: middle;
+}
+.nav-bar-profile-name {
+    display: block;
+}
+.ng-drop-file{
+    height: 150px;
+    border: dashed 4px rgba(0,0,0,0.38);
+    border-radius: 4px;
+    text-align: center;
+    display: table;
+}
+.ng-drop-file:hover{
+    border: dashed 4px rgba(0,0,0,0.54);
+}
+.upload-icon{
+    height: 40px;
+    width: 40px;
+    color: rgba(0,0,0,0.38);
+    display: table-cell;
+    vertical-align: middle;
+}
+.material-icons{
+    display: inline-flex;
+    vertical-align: middle;
+    color: white;
+}
+p{
+    font-size: 1.6rem;
+    font-weight: 400;
+    letter-spacing: 0.010em;
+    line-height: 1.6em;
+}
+.icon-list{
+    width: 24px;
+    margin-top: 16px;
+    margin-bottom: 12px;
+    box-sizing: content-box;
+    background-repeat: no-repeat no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+    height: 24px;
+    width: 24px;
+    margin-right: 32px;
+    color: rgba(0,0,0,0.54);
+    font-size: 22px;
+}
+md-list-item > a{
+    margin:0 !important;
+}
+.md-toolbar-tools{
+    background-color: #00bcd4;
+    color: white !important;
+}
+.md-tall{
+    background-color: #00bcd4 !important;
+    color: white !important;
+}
+.fav{
+    background: #F44336 !important;
+    color: white;
+}
+.fav2 > i{
+    color: #F44336;
+}
+md-toolbar.cover{
+    height: 350px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;"
+}
+.margin-content{
+    margin: 20px 0px;
+}
+i.profile-icon{
+    font-size: 16px !important;
+    color: #999;
+    text-align: center;
+    margin-right: 14px;
+}
+i.profile-button{
+    font-size: 16px !important;
+    text-align: center;
+    color: rgb(51,51,51);
+}
+.material{
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    border:none;
+    overflow: hidden;
+    background-color: white;
+    border-radius: 3px;
+    margin-top: 20px;
+    padding: 20px;
+}
+.delete-a:hover, .delete-a:visited, .delete-a:link, .delete-a:active
+{
+    text-decoration: none;
+    color: rgba(0,0,0,0.87);
+}
+.md-padding{
+    padding:0px;
 }
