--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -269,28 +269,13 @@ ul#strengthBar {
     color: white !important;
 }
 
-.message-1{
-    float: right;
-    margin-left: auto;
-    text-align: right;
-    -webkit-border-radius: 8px 8px 0px 8px;
-    -moz-border-radius: 8px 8px 0px 8px;
-    -o-border-radius: 8px 8px 0px 8px;
-    -ms-border-radius: 8px 8px 0px 8px;
-    border-radius: 8px 8px 0px 8px;
-    background-color: #0084ff !important;
-    color: white !important;
+.message-1 img{
+    order: 2;
 }
-.message-2{
-    float: left;
-    margin-right: auto;
-    -webkit-border-radius: 8px 8px 8px 0px;
-    -moz-border-radius: 8px 8px 8px 0px;
-    -o-border-radius: 8px 8px 8px 0px;
-    -ms-border-radius: 8px 8px 8px 0px;
-    border-radius: 8px 8px 8px 0px;
-    background-color: #65B045;
-    color: #ffffff;
+.message-1-div > div{
+    text-align: right;
+    order:1;
+    padding-right: 15px;
 }
 .bubble {
     margin-top: 20px;
