--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -428,3 +428,30 @@ i.profile-button{
 .white-icon{
     color: white !important;
 }
+.main-icons{
+    color: rgba(0,0,0,0.57);
+}
+.no-margin{
+    margin: 0px !important;
+}
+.no-error > .md-errors-spacer{
+    height: 0px;
+    float: none;
+}
+.pad-menu{
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+}
+.pad-menu > span{
+    display: block;
+}
+.img-menu{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin-bottom: 8px;
+}
+.color{
+    color: rgba(0,0,0,0.57);
+}
