Filter by service optimized for java 8 in multi threads.

--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -478,3 +478,10 @@ i.profile-button{
 md-list-item.md-3-line, md-list-item.listing > .md-no-style{
     min-height: auto;
 }
+
+@media (max-width: 992px) {
+    .pull-sm-right {
+        float: none !important;
+    }
+}
+
